kubernetes/flask-quiz-middleware-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: simple-quiz-stripprefix
  namespace: simple-quiz
spec:
  stripPrefix:
    prefixes:
      - /simple-quiz
